fix: settings