@@ -101,3 +101,10 @@ ei
 
 $ 
 ```
+
+
+```
+javac --module-path lib --add-modules javafx.controls,javafx.fxml -d bin Main.java
+java --module-path lib --add-modules javafx.controls,javafx.fxml -cp bin Main
+
+```
